--- a/RMIT_Applied_Analytics_2.Rmd
+++ b/RMIT_Applied_Analytics_2.Rmd
@@ -1,11 +1,16 @@
 ---
-title: "MATH2406 Applied Analytics"
-author: "Adam Simmons - student ID: s4001341"
-subtitle: "Assessment 2: Applied Data Project"
+title: "RMIT Applied Analytics - Assignment 2"
+author: "Adam Simmons"
+subtitle: "Applied Data Project"
 date: "4 June 2023"
 output:
   html_document:
     df_print: paged
+knit: (function(input_file, encoding) {
+    out_dir <- 'docs';
+    rmarkdown::render(input_file,
+      encoding=encoding,
+      output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ---
 
 
