--- a/RMIT_Applied_Analytics_2.Rmd
+++ b/RMIT_Applied_Analytics_2.Rmd
@@ -12,7 +12,7 @@ knit: (function(input_file, encoding) {
 
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(warning = FALSE, message = FALSE, fig.path = "man/figures/README-")
+knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 ```
 
 ## **Setup**
