update Applied Analytics 1

--- a/RMIT_Applied_Analytics_1.Rmd
+++ b/RMIT_Applied_Analytics_1.Rmd
@@ -7,11 +7,11 @@ knit: (function(input_file, encoding) {
     out_dir <- 'docs';
     rmarkdown::render(input_file,
       encoding=encoding,
-      output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
+      output_file=file.path(dirname(input_file), out_dir, 'index2.html'))})
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(warning = FALSE, message = FALSE, fig.path = "man/figures/README-")
+knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 ```
 
 <br>
