--- a/shiny-tco-app.Rmd
+++ b/shiny-tco-app.Rmd
@@ -2,6 +2,5 @@
 title: "Shiny app - Tolling Customer Ombudsman"
 ---
 
-```{r}
-knitr::include_url("https://adamsimmons.shinyapps.io/TCO_app/", height="780px")
-```
+<iframe height='780' width='100%' frameborder='no' src='https://adamsimmons.shinyapps.io/TCO_app/'> </iframe>"
+
