--- a/RMIT-AB-testing.Rmd
+++ b/RMIT-AB-testing.Rmd
@@ -6,11 +6,12 @@ June 15, 2023
 
 <center>
 
-<iframe src="https://player.vimeo.com/video/836475768?h=5fb92b17ca&amp;title=0&amp;byline=0&amp;portrait=0&amp;speed=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="RMIT Applied Analytics - A-B Testing analysis"></iframe>
+<div style="padding:40% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/836475768?h=5fb92b17ca&amp;title=0&amp;byline=0&amp;portrait=0&amp;speed=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="RMIT Applied Analytics - A-B Testing analysis"></iframe>
 
 </center>
 
 <br>
+
 This is a PowerPoint presentation based on analysis of A/B testing of a new recommendation engine for a hypothetical streaming service, *Why Not Watch*. For the analysis, I had to clean the data, ascertain what some of the variables were (i.e. demographic and social metric), check for outliers and errors. Then in order to check for linear relationshops and any differences between the A/B groups, I ran several hypothesis tests using linear regression methods, ANOVA and Z-tests. 
 
 
