--- a/index.Rmd
+++ b/index.Rmd
@@ -1,33 +1,33 @@
 ---
-title: "Adam Simmons"
+title: "Welcome"
 ---
 
-I've always been into numbers and problem-solving, which has been used in bookkeeping, grant writing, social network research and arts administration. Since 2021, I've been developing technical data skills in Excel, SQL, Python, R and Tableau - and a little in NVivo and Power BI.
+I've always been into numbers, technology and problem-solving, whether in bookkeeping, grant writing, social network research, music, sculpture or arts administration. 
 
-It is an exciting and stimulating time as the tools are just getting better and better, though there's still the need for people with data literacy skills.
+Since 2021, I've been developing technical data skills in Excel, SQL, Python, R and Tableau - and a little in NVivo and Power BI. This has been assisted gratefully by the Victorian Digital Jobs Program, which gave me 12 weeks training at RMIT Online, followed by a 12-week placement at KPMG in their Policy, Economics and Public Impact team, where I surprised myself by what I was able to bring to the team. 
+
+It is an exciting and stimulating time as the tools and technology are just getting better and better, though there's still the need for people with data literacy skills. 
 
 I've just completed my Grad Cert of Data Science at RMIT Online (June 2023), which involved Python (Jupyter Notebook) and R (RStudio) with a good smattering of PowerPoint along the way:
 
 -   Data Science with Python
-
 -   Data Visualisation
-
 -   Data Wrangling
-
 -   Applied Analytics
 
 It has been a good mix:
 
--   applying statistical theory and methods involving understanding distributions, linear regression, hypothesis testing.
-
--   plenty of data wrangling using Tidy Data principles
-
+-   applying statistical theory and methods: distributions, synthetic data, linear regression, hypothesis testing, forecasting, machine learning 
+-   plenty of data wrangling using Tidy Data principles and associated R libraries
 -   a text analysis of two 17th century plays, Macbeth and The Tragedie of Mariam
-
 -   creating data visualisation with Matplotlib, Seaborn, Plotly and ggplot
-
 -   building my first interactive Shiny app
 
+And most recently, building this Github-hosted website in Rmarkdown (and learning a little CSS along the way). 
+
 <br>
-<br>
-<br>
+
+Thanks for having a look around - let's chat data sometime soon!  
+
+
+
