update yaml for Macbeth/Mariam

--- a/other-projects.Rmd
+++ b/other-projects.Rmd
@@ -3,7 +3,7 @@ title: "Other projects"
 ---
 
 
-Here are some other examples of my data exploits
+Here are some other examples of my data exploits over the years. 
 
 
 <br>
