implement Ned's suggested fixes - typos on Other and TCO app, index text

--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ title: "Welcome"
 
 I've always been into numbers, technology and problem-solving, whether in bookkeeping, grant writing, social network research, music, sculpture or arts administration. 
 
-Since 2021, I've been developing technical data skills in Excel, SQL, Python, R and Tableau - and a little in NVivo and Power BI. This has been assisted gratefully by the Victorian Digital Jobs Program, which gave me 12 weeks training at RMIT Online, followed by a 12-week placement at KPMG in their Policy, Economics and Public Impact team, where I surprised myself by what I was able to bring to the team. 
+Since 2021, I've been developing technical data skills in Python, R, SQL, Tableau and Excel - and a little in NVivo and Power BI. This has been assisted gratefully by the Victorian Digital Jobs Program, which gave me 12 weeks training at RMIT Online, followed by a 12-week placement at KPMG in their Policy, Economics and Public Impact team, where I surprised myself by what I was able to bring to the team. 
 
 It is an exciting and stimulating time as the tools and technology are just getting better and better, though there's still the need for people with data literacy skills. 
 
