--- a/index.Rmd
+++ b/index.Rmd
@@ -4,30 +4,26 @@ title: "Welcome"
 
 I've always been into numbers, technology and problem-solving, whether in bookkeeping, grant writing, social network research, music, sculpture or arts administration. 
 
-Since 2021, I've been developing technical data skills in Python, R, SQL, Tableau and Excel - and a little in NVivo and Power BI. This has been assisted gratefully by the Victorian Digital Jobs Program, which gave me 12 weeks training at RMIT Online, followed by a 12-week placement at KPMG in their Policy, Economics and Public Impact team, where I surprised myself by what I was able to bring to the team. 
+Since 2021, I've been developing technical data skills in Python, R, SQL, Tableau and Excel -- and a little in NVivo and Power BI. This has been assisted gratefully by the Victorian Digital Jobs Program, which gave me 12 weeks training at RMIT Online, followed by a 12-week placement at KPMG in their Policy, Economics and Public Impact team, where I surprised myself by what I was able to bring to the team. 
 
 It is an exciting and stimulating time as the tools and technology are just getting better and better, though there's still the need for people with data literacy skills. 
 
-I've just completed my Grad Cert of Data Science at RMIT Online (June 2023), which involved Python (Jupyter Notebook) and R (RStudio) with a good smattering of PowerPoint along the way:
+I've just completed my Grad Cert of Data Science at RMIT Online (June 2023), which involved Python (Jupyter Notebook) and R (RStudio) with a good smattering of PowerPoint for presentations along the way.
 
--   Data Science with Python
--   Data Visualisation
--   Data Wrangling
--   Applied Analytics
+Here you'll find examples of my projects:
 
-It has been a good mix:
+- **Python** -- [data wrangling and analysis](RMIT-employee-retention.html), [visualisation, presentation and forecasting](vista-analysis.html)
+- **R** -- [data wrangling and analysis](RMIT-Statistical-Data-Analysis.html), [statistical theory and methods](RMIT-Stats-and-probability-with-R.html), [machine learning, linear regression and forecasting](RMIT-AB-testing.html)
+- **Shiny app** -- [interactive web app](shiny-tco-app.html) built with R
+- **Tableau** -- interactive visualisations of [sales reports/forecasting](tableau.html#puri), [investment advice](tableau.html#aircom), [government cultural funding](tableau.html#govt-arts) and [Spotify metrics](tableau.html#spotify)
+- **Presentation** -- examples of telling [data stories](rise-slide-of-python.html), presenting [A/B testing results](rise-slide-of-python.html) and a [text analysis](macbeth-and-mariam.html) of two 17th century plays
+- **Other** -- use of SQL, Excel, Gephi and Survey Monkey for projects such as [mock](other-projects.html#puri) and [real sales dashboards](other-projects.html#excel-dashboard)), [research](other-projects.html#socialnetwork) and [advocacy](other-projects.html#jazz-survey)
 
--   applying statistical theory and methods: distributions, synthetic data, linear regression, hypothesis testing, forecasting, machine learning 
--   plenty of data wrangling using Tidy Data principles and associated R libraries
--   a text analysis of two 17th century plays, _Macbeth_ and _The Tragedie of Mariam_
--   creating data visualisation with Matplotlib, Seaborn, Plotly and ggplot
--   building my first interactive Shiny app
 
-And most recently, building this Github-hosted website in Rmarkdown (and learning a little CSS along the way). 
+And of course, this [Github-hosted](https://github.com/adam-tuoa){target="_blank"} website is an example of me working in R Markdown (and learning a little CSS along the way). 
 
 <br>
 
-Thanks for having a look around - let's chat data sometime soon!  
+Thanks for having a look around -- [get in touch](contact-links.html) and let's chat data!  
 
-
-
+<br>
