update about and add ChatGpt/DALL-E 2

--- a/about.Rmd
+++ b/about.Rmd
@@ -69,7 +69,7 @@ Below are examples of some of the arts-related projects that have developed skil
 ### Stakeholder Engagement
 
 - Initiated the online Australian Jazz Forum 2020, to consult the national community to inform a parliamentary inquiry submission on Australia's creative industries. The result was over 80 participants representing artists, venues, organisations, education institutions, media and festivals. Collaboration was encouraged throuhgout and the final submission shared with all and made public.
-- At Wangaratta Festival of Jazz & Blues, I reported directly to the board, worked with event management team, represented the artistic panel, engaged with sponsors, venue owners, accommodation, tourism, funding partners, artists, volunteers and audiences - the result was an re-invigoration of the festival community spirit, new sponsors and positive critical reviews.
+- At Wangaratta Festival of Jazz & Blues, I reported directly to the board, worked with event management team, represented the artistic panel, engaged with sponsors, venue owners, accommodation, tourism, funding partners, artists, volunteers and audiences - the result was a re-invigoration of the festival community spirit, new sponsors and positive critical reviews.
 
 </td>
 
