--- a/about.Rmd
+++ b/about.Rmd
@@ -30,7 +30,7 @@ Below are examples of some of the arts-related projects that have developed skil
 - As Lead Co-Artistic Director of Wangaratta Festival of Jazz & Blues (2017-19), I established a partnership with Amersfoort Jazz Festival and the World Jazz Network, which led to export/showcase opportunities for Australian artists
 - Invited member of Ballarat Live Music Advisory Committee (2016)
 - Alumni of Australia Council Arts Leader Program (2017-18)
-- I have led professional and community ensembles, such as the one-off Spiderbait and Wangaratta Horns of Death featuring more than 60 musicians aged 10-70.
+- I have led professional and community ensembles, such as the one-off [Spiderbait and the Wangaratta Horns of Death](https://fb.watch/lv-oPf-qyM/){target="_blank} featuring more than 60 musicians aged 10-70.
 
 </td>
 <td>
