--- a/resume.Rmd
+++ b/resume.Rmd
@@ -71,9 +71,9 @@ title: "Resume"
 
 - a 50% success rate from over 85 funding applications
 - built and designed websites, including for [Stop EACOP](https://www.stopeacop.net){target="_blank"} and [Forestone Japan](https://www.forestone.com.au){target="_blank}
+- appeared on over 100 albums including Kutcha Edwards, Gotye, You Am I, Australian Art Orchestra, RONE, Dan Warner, Pugsley Buzzard
 - performed and recorded [100 duets in one month](https://www.100251.com.au){target="_blank"}, including social network analysis
 - contributed to the report on the review of Queensland's Public Records Act
-- responsible for the [Wangaratta Horns of Death with Spiderbait](https://fb.watch/lv-oPf-qyM/){target="_blank}
 - helped refine KPMG's querying method in NVivo to get obtain results
 
 
