--- a/chatgpt-dalle2.Rmd
+++ b/chatgpt-dalle2.Rmd
@@ -2,30 +2,43 @@
 title: "ChatGPT & DALL-E 2 with Python"
 ---
 
-## ChatGPT & DALL-E 2
+This is a simple Python script to access ChatGPT and DALL-E 2 within Jupyter Notebook.
 
-Basic code comes from Sophia Yang's article:
+The inspiration and core code comes from an [article by Sophia Yang](https://towardsdatascience.com/chatgpt-and-dall-e-2-in-a-panel-app-1c921d7d9021){target="_blank"} in Medium.
 
-https://towardsdatascience.com/chatgpt-and-dall-e-2-in-a-panel-app-1c921d7d9021
+My humble additions are to loop the query, opt to do an image prompt (see below) and to save images and/or conversations.
 
-I added the query loop, image and conversation saving
+Its been handy to have ChatGPT on call. It is definitely an interesting and valuable tool, though I have found it necessary to verify responses as errors are common. I've had the same answer to opposite questions and seen errors in basic arithmetic. A way I look at ChatGPT is similar to Wikipedia, in that it can help get you started, but you should still go the source for verification.
 
-Nothing fancy - just in Jupyter Notebook.
+Similarly with coding - at times ChatGPT is a great help, and at other times is just plain wrong. Though, sometimes the approach to a solution can help prompt my own thinking to solve the problem at hand. So, another way to think of ChatGPT is like a sounding board or a friend who is really trying to help. Used in this way, I've found ChatGPT to be a useful tool on a few projects to get me thinking about things in a different way.  
 
-For saving - create two folders in the directory where script is filed
+
+
+#### Getting ready
+
+Get Open AI Key - you'll need to set up a developer account to access the API key:
+
+- [https://platform.openai.com/overview](https://platform.openai.com/overview){target="_blank"}
+
+I believe the first month you get US$18 credit and then pay for monthly usage. With light to moderate usage, my bills are \$1 per month or less
+
+Create two folders in the same directory as the script for saving files: 
 
 - `chats`
 - `images`
 
-When chatting:
+#### Prompts:
 
 - ChaptGPT: default - just enter prompt
-- DALL-E 2: type `image:` plus text 
+- DALL-E 2: type `image:` plus text prompt 
 - Save image: after image is generated, type `save`
 - To finish: type `exit`
 
-After you finish a chat, you will be asked if you wish to save the conversation
+After you finish a chat, you will be asked if you wish to save the conversation.
 
+<br>
+
+## Setup
 
 ```python
 from chatgpt import Conversation
@@ -36,16 +49,18 @@ import openai
 from IPython.display import display, HTML
 from IPython.display import Image
 
-
 import pandas as pd
 
 working_directory = os.getcwd()
 working_directory = "/Users/adam/data/ChatGPT/"
 
-openai.api_key = "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"
+# Enter personal OpenAI key here - see link above
+openai.api_key = "<INSERT OPENAI KEY HERE>"
 ```
 
-# A list of models 
+## Functions
+
+### A list of models 
 
 If you wish to try other models, a list can be obtained with use of this code:
 
@@ -87,6 +102,7 @@ def append_strings_to_df(question, response):
     
 ```
 
+## Main prompt loop
 
 ```python
 # Set up empty conversation df
