--- a/index.Rmd
+++ b/index.Rmd
@@ -18,12 +18,12 @@ I've just completed my Grad Cert of Data Science at RMIT Online (June 2023), uti
 
 Here you'll find examples of my projects:
 
-- **Python** -- [data wrangling and analysis](RMIT-employee-retention.html), [visualisation, presentation and forecasting](vista-analysis.html)
-- **R** -- [data wrangling and analysis](RMIT-Statistical-Data-Analysis.html), [statistical theory and methods](RMIT-Stats-and-probability-with-R.html), [machine learning, linear regression and forecasting](RMIT-AB-testing.html)
+- **Python** -- [data wrangling and analysis](employee-retention.html), [visualisation, presentation and forecasting](vista-analysis.html)
+- **R** -- [data wrangling and analysis](statistical-data-analysis.html), [statistical theory and methods](stats-and-probability-with-r.html), [machine learning, linear regression and forecasting](ab-testing.html)
 - **Shiny app** -- [interactive web app](shiny-tco-app.html) built with R
 - **Tableau** -- interactive visualisations of [sales reports/forecasting](tableau.html#puri), [investment advice](tableau.html#aircom), [government cultural funding](tableau.html#govt-arts) and [Spotify metrics](tableau.html#spotify)
 - **ML/AI** -- machine learning for [spam classification](spam-classification.html) and a Python script to access [ChatGPT and DALL-E 2](chatgpt-dalle2.html) in Jupyter Notebook
-- **Presentation** -- examples of telling [data stories](rise-slide-of-python.html), presenting [A/B testing results](rise-slide-of-python.html) and a [text analysis](macbeth-and-mariam.html) of two 17th century plays
+- **Presentation** -- examples of telling [data stories](rise-slide-of-python.html), presenting [A/B testing results](ab-testing.html) and a [text analysis](macbeth-and-mariam.html) of two 17th century plays
 - **Other** -- use of SQL, Excel, Gephi and Survey Monkey for projects such as [mock](other-projects.html#puri) and [real sales dashboards](other-projects.html#excel-dashboard)), [research](other-projects.html#socialnetwork) and [advocacy](other-projects.html#jazz-survey)
 
 
